# g-stvk-flow

./: .gitignore  README.md  ST-VK-Flow.txt  pyproject.toml  requirements.txt
configs/: baseline_spatial_only.yaml  baseline_temporal_only.yaml  baseline_vanilla.yaml  default.yaml  train_stageA.yaml  train_stageA_1p15b_ucf101_320x240_25fps.yaml  train_stageA_1p15b_ucf101_320x240_25fps_pathB.yaml  train_stageA_1p15b_ucf101_320x240_25fps_vanilla.yaml  ucf101.yaml
g_stvk_flow/: config.py
g_stvk_flow/backbone/: __init__.py  velocity_model.py  video_dit.py
g_stvk_flow/data/: __init__.py  dataset.py  preprocessing.py
g_stvk_flow/engine/: __init__.py  inference.py  trainer.py
g_stvk_flow/fm/: __init__.py  _bootstrap.py  path.py  solver.py
g_stvk_flow/fm_core/: __init__.py  path.py  sampler.py
g_stvk_flow/gstvk/: __init__.py  anchor_edit.py  haar3d.py  interpolant.py
g_stvk_flow/kflow/: __init__.py  band_defs.py  decompose.py  haar1d_time.py  haar2d.py  path_scheduler.py
g_stvk_flow/losses/: __init__.py  diffusion_loss.py
g_stvk_flow/models/: __init__.py  band_embed.py  embeddings.py  opensora_dit.py  stdit_band.py  (+3 more)
scripts/: ablate_band.py  compare_stageA_quality_runs.py  compare_stageA_runs.py  diagnose_transport.py  eval_checkpoint_gate.py  eval_disentangle_bidirectional.py  eval_disentangle_intrinsic.py  eval_disentangle_semantic.py  eval_stageA.py  eval_stageA_quality.py  infer.py  infer_disentangled.py  monitor_stageA_quality.py  preprocess_videos.py  sample_stageA_batch.py  train.py  train_class_cond.py  train_stageA.py  train_t2v.py  train_uncond.py
(+20 files in other folders)
